--- a/release/exercisebank.sty
+++ b/release/exercisebank.sty
@@ -1,5 +1,5 @@
 % Source (with comments) can be found at https://github.com/Strauman/exercisebank/
-%% The LaTeX package exercisebank - version v0.2.3 (2018/12/03) - build 112
+%% The LaTeX package exercisebank - version v0.2.3 (2018/12/07) - build 113
 %% exercisebank.sty: Exercise bank
 %% -------------------------------------------------------------------------------------------
 %% Copyright (c) 2018 by Andreas Storvik Strauman <andreas dot s dot strauman at uit dot no>
@@ -13,9 +13,9 @@
 %% version 2008/05/04 or later.
 %% This work has the LPPL maintenance status `author-maintained'.
 %% This work consists of all files listed in README
-\ProvidesPackage{exercisebank}[2018/12/03 v0.2.3 Creates a setup that gives freedom in making sets and exercises.]
+\ProvidesPackage{exercisebank}[2018/12/07 v0.2.3 Creates a setup that gives freedom in making sets and exercises.]
 \xdef\exbank@quiet{1}
-\def\exercisebankversion{v0.2.3 - Build 112}
+\def\exercisebankversion{v0.2.3 - Build 113}
 \PackageWarningNoLine{exercisebank-v0.2.3}{This package is in the beta stage, and if something unexpected happens please, oh pretty please, report it to https://github.com/Strauman/exercisebank. Thank you!}
 \@ifundefined{ownLineNoSpacesGotIt}{\@latex@warning{Compilation wont work unless \string\end{problem} and \string\end{solution} are on their own lines and without any spaces. This warning can be removed by doing \string\def\string\ownLineNoSpacesGotIt{} before \@backslashchar usepackage{exercisebank}}
 }{}
@@ -173,7 +173,7 @@
 \def\exb@intersection@any#1#2#3#4{%
 	\global\exb@isintersectionfalse%
 	\edef\listarg{#1}%
-	\ifnum\pdfstrcmp{\listarg}{}=\z@\relax\@dlog{RELAX}#4\else
+	\ifx\listarg\empty\@dlog{RELAX}#4\else%
 	\readlist*\needlelist{#1}%
 		\foreachitem\needle\in\needlelist{%
 			\exb@isin{\needle}{#2}{\global\exb@isintersectiontrue}{}%
@@ -461,8 +461,7 @@ solution only/.code={\ifexb@DisplaySolutions\else\pgfkeysalso{/exbank/problems/h
 }
 \def\nextproblem{\pgfqkeys{/exbank/problems}}
 \newcounter{exb@cutfilecounter}
-\gdef\CommentCutFile{exb-\theexb@cutfilecounter.cut}
-\gdef\do@ProcessCutFile{\input{\CommentCutFile}\global\stepcounter{exb@cutfilecounter}\theexb@cutfilecounter\relax}
+\global\let\do@ProcessCutFile = \ProcessCutFile
 \At\EndProblem{%
 	\ifexb@opt@tightenparagraphs\relax%
 		\ifexb@DisplaySolutions%
@@ -514,7 +513,8 @@ solution only/.code={\ifexb@DisplaySolutions\else\pgfkeysalso{/exbank/problems/h
 		\fi%
 }%
   \ifexb@solutionsonly\def\ProcessCutFile{}\ifexb@DisplayCurrentProblem\relax\stepcounter{partproblemcounter}\fi\fi
-}{\@dinfo{Ending problem env}%
+}{%
+\@dinfo{Ending problem env}%
 	\ifexb@DisplayCurrentProblem\relax%
 		\ifexb@opt@partProblems\relax%
 			\Trigger\EndPartproblem%
@@ -525,11 +525,12 @@ solution only/.code={\ifexb@DisplaySolutions\else\pgfkeysalso{/exbank/problems/h
 	\@dinfo{Ended problem env}%
 }
 \g@addto@macro\AfterproblemComment{\nextproblem{default}\ignorespaces}%
-\generalcomment{solution}{\@dinfo{START solution ENV}%
+\generalcomment{solution}{%
+\@dinfo{START solution ENV}%
 	\Trigger\AtBeginSolutionHard
 	\begingroup
 	\ifexb@DisplaySolutions%
-		\ifexb@DisplayCurrentProblem\isFalse%
+		\ifexb@DisplayCurrentProblem\else%
 			\global\exb@DisplayCurrentSolutionfalse
 		\fi
 	\fi
