Fix missing points when nohead args are given. Fix #92

--- a/src/pplabel.tex
+++ b/src/pplabel.tex
@@ -4,7 +4,7 @@
 %% Reference problems
 %:§makingSets
 %:-
-\newcommand\refcounter[1]{
+\providecommand\refcounter[1]{
 \edef\@currentlabel{#1}%
 }
 %:=\pplabel{label}
