Allow underscore for files in \makeset.\n Fix #55

--- a/docs/changelog.tex
+++ b/docs/changelog.tex
@@ -73,6 +73,7 @@
     \change{Made \dac\HideTags cummulative.}
     \change{Created \dac\ShowAllTags for clearing tags list}
     \change{Raises error when pdfTeX(or pdfLaTeX) is not used}
+    \change{Allow underscore for files in \dac\makeset}
 \chlogtable
 
 
