Make and document \exercisepoints. \n Also some cleaning in release info

--- a/docs/changelog.tex
+++ b/docs/changelog.tex
@@ -68,15 +68,16 @@
     \change{Fixed bug where \dac\phead and \dac\ShowFilenames crash}
     \change{Introduced \dac\SolutionsOnly}
     \change{Fixed bug where part problem header repeats if solution is itemize.}
-    \change{Introduced the \dac\rigid command for the \dac\At functionality. Also the \dac\ClearHook for deleting a hook}
+    \change{Introduced the \dac\@rigid command for the \dac\At functionality. Also the \dac\ClearHook for deleting a hook}
     \change{\dac\buildset now gives error if set does not exist.}
     \change{Made \dac\HideTags cummulative.}
     \change{Created \dac\ShowAllTags for clearing tags list}
     \change{Raises error when pdfTeX(or pdfLaTeX) is not used}
-    \change{Allow underscore for files in \dac\makeset}
+    % \change{Allow underscore for files in \dac\makeset}
+    \change{Added \dac\exercisepoints for getting total number of points in an exercise/problem.}
 \chlogtable
 
 
 % Testers and thanks
-\tester{\gh{thorstengrothe}}
+\thankyous{\gh{thorstengrothe}}
 \tester{\gh{tristelune1}}
