--- a/documentation-doc.tex
+++ b/documentation-doc.tex
@@ -12,6 +12,11 @@ What section are we in?
 %:§sectionVar=Section name
 %:-
 
+Set/change the section that you want to write the doc in
+%:§sectionVar
+% Stuff in here will come under the "Section name" section
+%:-
+
 Macro definition
 %:=\someMacro[oarg]{marg1}{marg2}
 %: Description
