--- a/src/exbankpack.tex
+++ b/src/exbankpack.tex
@@ -4,7 +4,7 @@
 %:§makingSets=Making sets
 %:§config=Configuration and options
 %:§lang=Internationalization
-%:§problemopts=Problem options and tagging
+%:§problemopts=Problem options: points and tagging
 %:§triggers=Triggers
 %:§ref=General reference
 %:§count=Counters
